// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartBulletQualitativeRange 1`] = `
<DocumentFragment>
  <div
    class="pf-c-chart"
    style="pointer-events: none; position: relative; width: 100%; height: 100%;"
  >
    <svg
      height="140"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 450 140"
      width="450"
    />
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="140"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 450 140"
        width="450"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChartBulletQualitativeRange 2`] = `
<DocumentFragment>
  <div
    class="pf-c-chart"
    style="pointer-events: none; position: relative; width: 100%; height: 100%;"
  >
    <svg
      height="140"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 450 140"
      width="450"
    />
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="140"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 450 140"
        width="450"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders component data 1`] = `
<DocumentFragment>
  <div
    class="pf-c-chart"
    style="pointer-events: none; position: relative; width: 100%; height: 100%;"
  >
    <svg
      height="140"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 450 140"
      width="450"
    >
      <g
        role="presentation"
      >
        <path
          d="M 50, 104.8 
A 0 0 0 0 1, 50, 104.8 
L 50, 74.8 
A 0 0 0 0 1, 50, 74.8 
L 399.99999999976666, 74.8 
A 0 0 0 0 1, 399.99999999976666, 74.8 
L 399.99999999976666, 104.8 
A 0 0 0 0 1, 399.99999999976666, 104.8 
 z"
          index="0"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-bullet--qualitative-range--ColorScale--300, #b8bbbe); stroke: var(--pf-chart-bar--data--stroke, none); padding: 8px; stroke-width: 0;"
        />
      </g>
      <g
        role="presentation"
      >
        <path
          d="M 50, 104.8 
A 0 0 0 0 1, 50, 104.8 
L 50, 74.8 
A 0 0 0 0 1, 50, 74.8 
L 399.9999999995882, 74.8 
A 0 0 0 0 1, 399.9999999995882, 74.8 
L 399.9999999995882, 104.8 
A 0 0 0 0 1, 399.9999999995882, 104.8 
 z"
          index="0"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-bullet--qualitative-range--ColorScale--200, #d2d2d2); stroke: var(--pf-chart-bar--data--stroke, none); padding: 8px; stroke-width: 0;"
        />
      </g>
      <g
        role="presentation"
      >
        <path
          d="M 50, 104.8 
A 0 0 0 0 1, 50, 104.8 
L 50, 74.8 
A 0 0 0 0 1, 50, 74.8 
L 399.9999999993, 74.8 
A 0 0 0 0 1, 399.9999999993, 74.8 
L 399.9999999993, 104.8 
A 0 0 0 0 1, 399.9999999993, 104.8 
 z"
          index="0"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-bullet--qualitative-range--ColorScale--100, #f0f0f0); stroke: var(--pf-chart-bar--data--stroke, none); padding: 8px; stroke-width: 0;"
        />
      </g>
    </svg>
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="140"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 450 140"
        width="450"
      />
    </div>
  </div>
</DocumentFragment>
`;
